BUG#59740 Performance schema test failures on freebsd

Investigation of bug 59740 shows that selects on
table performance_schema.events_waits_summary_by_thread_by_event_name
sometime to not return the expected rows.

While the root cause of this is not identified yet,
the method table_ews_by_thread_by_event_name::rnd_next()
is suspected to be the origin of the failure.

The code of this method can benefit from simplifications already
identified with other tables, see for example
table_setup_instruments::rnd_next().

This fix implements several improvements for the table scan
of table performance_schema.events_waits_summary_by_thread_by_event_name.
In particular:
- code duplication is reduced
- code complexity is reduced
- the number of calls to thread_array[i].m_lock.is_populated()
  is reduced by a factor 200+ (the number of instruments)
  This is implemented by changing the iteration on threads from
  the innermost index (index 3) to the outermost index (index 1).

While is it unclear if calling atomic operations too frequently
can cause end_optimistic_lock() to fail in ::make_row(),
which could be a possible root cause for the bug found,
reducing the number of calls to atomic operations will make the code
more robust and scalable, so implementing this cleanup is required.

This fix also improves the ortho_iter test, for coverage,
since it also checks table events_waits_summary_by_thread_by_event_name.